--- a/generator.html
+++ b/generator.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Din Bildgalleri Sida</title>
+    <title>Sökgeneratorn</title>
     <link href="https://fonts.googleapis.com/css2?family=Exo+2&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -74,17 +74,7 @@
             <!-- Fortsätt med resten av bilderna för tredje raden -->
         </div>
 
-        <!-- Fjärde raden med bilder -->
-        <div class="gallery-row">
-            <img src="images/knappargenerator/knappar/27.png" alt="Bildbeskrivning">
-            <img src="images/knappargenerator/knappar/28.png" alt="Bildbeskrivning">
-            <img src="images/knappargenerator/knappar/29.png" alt="Bildbeskrivning">
-            <img src="images/knappargenerator/knappar/30.png" alt="Bildbeskrivning">
-            <img src="images/knappargenerator/knappar/31.png" alt="Bildbeskrivning">
-            <img src="images/knappargenerator/knappar/32.png" alt="Bildbeskrivning">
-            <img src="images/knappargenerator/knappar/33.png" alt="Bildbeskrivning">
-            <!-- Fortsätt med resten av bilderna för tredje raden -->
-    </div>
+    
 
     <div class="footer-banner">
         <!-- Footer content -->
