--- a/generator.html
+++ b/generator.html
@@ -28,6 +28,9 @@
         <div class="gallery-row">
             <img src="images/knappargenerator/knappar/27.png" alt="Bildbeskrivning">
             <img src="images/knappargenerator/knappar/lunchmiddag2.png" alt="Bildbeskrivning">
+            <img src="images/knappargenerator/knappar/lunchmiddag3.png" alt="Bildbeskrivning">
+            <img src="images/knappargenerator/knappar/lunchmiddag4.png" alt="Bildbeskrivning">
+            <img src="images/knappargenerator/knappar/lunchmiddag5.png" alt="Bildbeskrivning">
             <img src="images/knappargenerator/knappar/29.png" alt="Bildbeskrivning">
             <img src="images/knappargenerator/knappar/30.png" alt="Bildbeskrivning">
             <img src="images/knappargenerator/knappar/31.png" alt="Bildbeskrivning">
