--- a/generator.html
+++ b/generator.html
@@ -7,6 +7,7 @@
     <title>Din Startsida Titel</title>
     <link href="https://fonts.googleapis.com/css2?family=Exo+2&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
 </head>
 
 <body>
