--- a/generator.html
+++ b/generator.html
@@ -108,18 +108,30 @@
         <button class="filter-btn" data-category="country" data-filter="Sverige">Sverige</button>
         <button class="filter-btn" data-category="country" data-filter="Italien">Italien</button>
         <!-- Fler knappar -->
+        <!-- Extra knappar, initialt dolda -->
+        <button class="filter-btn hidden">Frankrike</button>
+        <button class="filter-btn hidden">Tyskland</button>
+        <!-- Resten av dina dolda knappar... -->
     </div>
 
     <div class="filter-container" id="proteins">
         <button class="filter-btn" data-category="protein" data-filter="Nötkött">Nötkött</button>
         <button class="filter-btn" data-category="protein" data-filter="Fisk">Fisk</button>
         <!-- Fler knappar -->
+        <!-- Extra knappar, initialt dolda -->
+        <button class="filter-btn hidden">Skaldjur</button>
+        <button class="filter-btn hidden">Fläsk</button>
+        <!-- Resten av dina dolda knappar... -->
     </div>
 
     <div class="filter-container" id="meal-types">
         <button class="filter-btn" data-category="mealType" data-filter="Soppa">Soppa</button>
         <button class="filter-btn" data-category="mealType" data-filter="Pasta">Pasta</button>
         <!-- Fler knappar -->
+        <!-- Extra knappar, initialt dolda -->
+        <button class="filter-btn hidden">efterrätt</button>
+        <button class="filter-btn hidden">brunch</button>
+        <!-- Resten av dina dolda knappar... -->
     </div>
 
     <!-- Sök Knapp -->
