--- a/generator.html
+++ b/generator.html
@@ -107,12 +107,13 @@
     <div class="filter-container" id="countries">
         <button class="filter-btn" data-category="country" data-filter="Sverige">Sverige</button>
         <button class="filter-btn" data-category="country" data-filter="Italien">Italien</button>
-        <!-- Fler knappar -->
-        <!-- Extra knappar, initialt dolda -->
+        <!-- Dina befintliga dolda knappar -->
         <button class="filter-btn hidden">Frankrike</button>
         <button class="filter-btn hidden">Tyskland</button>
-        <!-- Resten av dina dolda knappar... -->
+        <!-- Lägg till en "Visa fler"-knapp här -->
+        <button class="show-more-btn" data-target="countries">Visa fler</button>
     </div>
+    
 
     <div class="filter-container" id="proteins">
         <button class="filter-btn" data-category="protein" data-filter="Nötkött">Nötkött</button>
