--- a/generator.html
+++ b/generator.html
@@ -105,8 +105,8 @@
     <!-- Sökfilter Knappar -->
     <!-- Filter Knappar -->
     <div class="filter-container" id="countries">
-        <button class="filter-btn" data-category="country" data-filter="Sverige">Sverige</button>
-        <button class="filter-btn" data-category="country" data-filter="Italien">Italien</button>
+        <button class="filter-btn" data-category="country" data-filter="sverige">Sverige</button>
+        <button class="filter-btn" data-category="country" data-filter="italien">Italien</button>
         <!-- Dina befintliga dolda knappar -->
         <button class="filter-btn hidden">Frankrike</button>
         <button class="filter-btn hidden">Tyskland</button>
@@ -116,8 +116,8 @@
     
 
     <div class="filter-container" id="proteins">
-        <button class="filter-btn" data-category="protein" data-filter="Nötkött">Nötkött</button>
-        <button class="filter-btn" data-category="protein" data-filter="Fisk">Fisk</button>
+        <button class="filter-btn" data-category="protein" data-filter="nöt">Nötkött</button>
+        <button class="filter-btn" data-category="protein" data-filter="fisk">Fisk</button>
         <!-- Fler knappar -->
         <!-- Extra knappar, initialt dolda -->
         <button class="filter-btn hidden">Skaldjur</button>
@@ -126,8 +126,8 @@
     </div>
 
     <div class="filter-container" id="meal-types">
-        <button class="filter-btn" data-category="mealType" data-filter="Soppa">Soppa</button>
-        <button class="filter-btn" data-category="mealType" data-filter="Pasta">Pasta</button>
+        <button class="filter-btn" data-category="mealType" data-filter="soppa">Soppa</button>
+        <button class="filter-btn" data-category="mealType" data-filter="pasta">Pasta</button>
         <!-- Fler knappar -->
         <!-- Extra knappar, initialt dolda -->
         <button class="filter-btn hidden">efterrätt</button>
