--- a/generator.html
+++ b/generator.html
@@ -94,7 +94,7 @@
         </ul>
     </nav>
 
-    <a href="startsida.html" class="logo-link">
+    <a href="startsida1.html" class="logo-link">
         <img src="images/visplogo/Logo Files/For Web/svg/White logo - no background.svg" alt="Logga" />
     </a>
 
