--- a/generator.html
+++ b/generator.html
@@ -138,7 +138,7 @@
     <!-- Sök Knapp -->
     <button id="searchBtn">Sök</button>
 
-
+    <div id="pagination-controls"></div> <!-- Pagineringskontroller här -->
 
     <div class="footer-banner">
         <!-- Footer content här -->
