--- a/generator.html
+++ b/generator.html
@@ -144,7 +144,7 @@
         <!-- Footer content här -->
     </div>
 
-    <script src="scripts.js"></script>
+    <script src="generator.js"></script>
 </body>
 
 </html>
