--- a/generator.html
+++ b/generator.html
@@ -105,15 +105,23 @@
     <!-- Sökfilter Knappar -->
     <!-- Filter Knappar -->
     <div class="filter-container" id="countries">
-        <button class="filter-btn" data-category="country" data-filter="sverige">Sverige</button>
-        <button class="filter-btn" data-category="country" data-filter="italien">Italien</button>
-        <!-- Dina befintliga dolda knappar -->
-        <button class="filter-btn hidden">Frankrike</button>
-        <button class="filter-btn hidden">Tyskland</button>
+        <button class="image-button" data-category="country" data-filter="sverige">
+            <img src="images/knappargenerator/knappar/1.png" alt="Sverige" />
+        </button>
+        <button class="image-button" data-category="country" data-filter="italien">
+            <img src="images/knappargenerator/knappar/10.png" alt="Italien" />
+        </button>
+        <button class="image-button hidden" data-category="country" data-filter="frankrike">
+            <img src="images/knappargenerator/knappar/11.png" alt="Frankrike" />
+        </button>
+        <button class="image-button hidden" data-category="country" data-filter="tyskland">
+            <img src="images/knappargenerator/knappar/12.png" alt="Tyskland" />
+        </button>
         <!-- Lägg till en "Visa fler"-knapp här -->
         <button class="show-more-btn" data-target="countries">Visa fler</button>
     </div>
-    
+
+
 
     <div class="filter-container" id="proteins">
         <button class="filter-btn" data-category="protein" data-filter="nöt">Nötkött</button>
