--- a/generator.html
+++ b/generator.html
@@ -105,20 +105,20 @@
     <!-- Sökfilter Knappar -->
     <!-- Filter Knappar -->
     <div class="filter-container" id="countries">
-        <button class="image-button" data-category="country" data-filter="sverige">
-            <img src="images/knappargenerator/knappar/1.png" alt="Sverige" />
-        </button>
-        <button class="image-button" data-category="country" data-filter="italien">
-            <img src="images/knappargenerator/knappar/10.png" alt="Italien" />
-        </button>
-        <button class="image-button hidden" data-category="country" data-filter="frankrike">
-            <img src="images/knappargenerator/knappar/11.png" alt="Frankrike" />
-        </button>
-        <button class="image-button hidden" data-category="country" data-filter="tyskland">
-            <img src="images/knappargenerator/knappar/12.png" alt="Tyskland" />
-        </button>
+        <div class="image-button" data-category="country" data-filter="sverige">
+            <img src="images/knappargenerator/knappar/14.png" alt="Sverige" />
+        </div>
+        <div class="image-button" data-category="country" data-filter="italien">
+            <img src="images/knappargenerator/knappar/15.png" alt="Italien" />
+        </div>
+        <div class="image-button" data-category="country" data-filter="sverige">
+            <img src="images/knappargenerator/knappar/16.png" alt="Sverige" />
+        </div>
+        <div class="image-button" data-category="country" data-filter="italien">
+            <img src="images/knappargenerator/knappar/17.png" alt="Italien" />
+        </div>
         <!-- Lägg till en "Visa fler"-knapp här -->
-        <button class="show-more-btn" data-target="countries">Visa fler</button>
+        <div class="show-more-btn" data-target="countries">Visa fler</div>
     </div>
 
 
