--- a/generator.html
+++ b/generator.html
@@ -109,7 +109,7 @@
             <img src="images/knappargenerator/knappar/14.png" alt="Sverige" />
         </div>
         <div class="image-button" data-category="country" data-filter="italien">
-            <img src="images/knappargenerator/knappar/15.png" alt="Italien" />
+            <img src="images/knappargenerator/knappar/thailand 2.png" alt="Thailand" />
         </div>
         <div class="image-button" data-category="country" data-filter="sverige">
             <img src="images/knappargenerator/knappar/16.png" alt="Sverige" />
