--- a/generator.html
+++ b/generator.html
@@ -117,6 +117,9 @@
         <div class="image-button" data-category="country" data-filter="italien">
             <img src="images/knappargenerator/knappar/17.png" alt="Italien" />
         </div>
+        <div class="image-button" data-category="country" data-filter="italien">
+            <img src="images/knappargenerator/knappar/17.png" alt="Italien" />
+        </div>
         <!-- Lägg till en "Visa fler"-knapp här -->
         <div class="show-more-btn" data-target="countries">Visa fler</div>
     </div>
