lägger till knappar när visa fler knappen trycks in

--- a/generator.html
+++ b/generator.html
@@ -120,6 +120,18 @@
         <div class="image-button" data-category="country" data-filter="italien">
             <img src="images/knappargenerator/knappar/17.png" alt="Italien" />
         </div>
+        <!-- Dolda knappar som visas när "Visa fler" klickas -->
+        <div class="image-button hidden" data-category="country" data-filter="frankrike">
+            <img src="images/knappargenerator/knappar/11.png" alt="Frankrike" />
+        </div>
+        <div class="image-button hidden" data-category="country" data-filter="spanien">
+            <img src="images/knappargenerator/knappar/16.png" alt="Spanien" />
+        </div>
+        <div class="image-button hidden" data-category="country" data-filter="tyskland">
+            <img src="images/knappargenerator/knappar/18.png" alt="Tyskland" />
+        </div>
+        <!-- Lägg till fler dolda knappar efter behov -->
+
         <!-- Lägg till en "Visa fler"-knapp här -->
         <div class="show-more-btn" data-target="countries">Visa fler</div>
     </div>
