--- a/generator.html
+++ b/generator.html
@@ -139,23 +139,79 @@
 
 
     <div class="filter-container" id="proteins">
-        <button class="filter-btn" data-category="protein" data-filter="nöt">Nötkött</button>
-        <button class="filter-btn" data-category="protein" data-filter="fisk">Fisk</button>
-        <!-- Fler knappar -->
-        <!-- Extra knappar, initialt dolda -->
-        <button class="filter-btn hidden">Skaldjur</button>
-        <button class="filter-btn hidden">Fläsk</button>
-        <!-- Resten av dina dolda knappar... -->
+        <div class="image-button" data-category="protein" data-filter="fisk">
+            <img src="images/knappargenerator/knappar/14.png" alt="Fisk" />
+        </div>
+        <div class="image-button" data-category="protein" data-filter="fisk">
+            <img src="images/knappargenerator/knappar/14.png" alt="Fisk" />
+        </div>
+        <div class="image-button" data-category="protein" data-filter="fisk">
+            <img src="images/knappargenerator/knappar/14.png" alt="Fisk" />
+        </div>
+        <div class="image-button" data-category="protein" data-filter="fisk">
+            <img src="images/knappargenerator/knappar/14.png" alt="Fisk" />
+        </div>
+        <div class="image-button" data-category="protein" data-filter="fisk">
+            <img src="images/knappargenerator/knappar/14.png" alt="Fisk" />
+        </div>
+        <div class="image-button" data-category="protein" data-filter="fisk">
+            <img src="images/knappargenerator/knappar/14.png" alt="Fisk" />
+        </div>
+        <div class="image-button" data-category="protein" data-filter="fisk">
+            <img src="images/knappargenerator/knappar/14.png" alt="Fisk" />
+        </div>
+        <!-- Dolda knappar som visas när "Visa fler" klickas -->
+        <div class="image-button hidden" data-category="protein" data-filter="fisk">
+            <img src="images/knappargenerator/knappar/22.png" alt="X" />
+        </div>
+        <div class="image-button hidden" data-category="protein" data-filter="fisk">
+            <img src="images/knappargenerator/knappar/22.png" alt="X" />
+        </div>
+        <div class="image-button hidden" data-category="protein" data-filter="fisk">
+            <img src="images/knappargenerator/knappar/22.png" alt="X" />
+        </div>
+        <!-- Lägg till fler dolda knappar efter behov -->
+
+        <!-- Lägg till en "Visa fler"-knapp här -->
+        <div class="show-more-btn" data-target="proteins">Visa fler</div>
     </div>
 
     <div class="filter-container" id="meal-types">
-        <button class="filter-btn" data-category="mealType" data-filter="soppa">Soppa</button>
-        <button class="filter-btn" data-category="mealType" data-filter="pasta">Pasta</button>
-        <!-- Fler knappar -->
-        <!-- Extra knappar, initialt dolda -->
-        <button class="filter-btn hidden">efterrätt</button>
-        <button class="filter-btn hidden">brunch</button>
-        <!-- Resten av dina dolda knappar... -->
+        <div class="image-button" data-category="mealType" data-filter="lunch & middag">
+            <img src="images/knappargenerator/knappar/6.png" alt="X" />
+        </div>
+        <div class="image-button" data-category="mealType" data-filter="lunch & middag">
+            <img src="images/knappargenerator/knappar/6.png" alt="X" />
+        </div>
+        <div class="image-button" data-category="mealType" data-filter="lunch & middag">
+            <img src="images/knappargenerator/knappar/6.png" alt="X" />
+        </div>
+        <div class="image-button" data-category="mealType" data-filter="lunch & middag">
+            <img src="images/knappargenerator/knappar/6.png" alt="X" />
+        </div>
+        <div class="image-button" data-category="mealType" data-filter="lunch & middag">
+            <img src="images/knappargenerator/knappar/6.png" alt="X" />
+        </div>
+        <div class="image-button" data-category="mealType" data-filter="lunch & middag">
+            <img src="images/knappargenerator/knappar/6.png" alt="X" />
+        </div>
+        <!-- Dolda knappar som visas när "Visa fler" klickas -->
+        <div class="image-button hidden" data-category="mealType" data-filter="lunch & middag">
+            <img src="images/knappargenerator/knappar/8.png" alt="X" />
+        </div>
+        <div class="image-button hidden" data-category="mealType" data-filter="lunch & middag">
+            <img src="images/knappargenerator/knappar/8.png" alt="X" />
+        </div>
+        <div class="image-button hidden" data-category="mealType" data-filter="lunch & middag">
+            <img src="images/knappargenerator/knappar/8.png" alt="X" />
+        </div>
+        <div class="image-button hidden" data-category="mealType" data-filter="lunch & middag">
+            <img src="images/knappargenerator/knappar/8.png" alt="X" />
+        </div>
+        <!-- Lägg till fler dolda knappar efter behov -->
+
+        <!-- Lägg till en "Visa fler"-knapp här -->
+        <div class="show-more-btn" data-target="meal-types">Visa fler</div>
     </div>
 
     <!-- Sök Knapp -->
