la till avdelare och rubriker på generator sidan

--- a/generator.html
+++ b/generator.html
@@ -102,6 +102,7 @@
 
     <div class="background-container"></div>
 
+    <h2 class="category-title">Länder:</h2>
     <!-- Sökfilter Knappar -->
     <!-- Filter Knappar -->
     <div class="filter-container" id="countries">
@@ -137,7 +138,7 @@
     </div>
 
 
-
+    <h2 class="category-title">Typ av Protein:</h2>
     <div class="filter-container" id="proteins">
         <div class="image-button" data-category="protein" data-filter="fisk">
             <img src="images/knappargenerator/knappar/14.png" alt="Fisk" />
@@ -176,6 +177,7 @@
         <div class="show-more-btn" data-target="proteins">Visa fler</div>
     </div>
 
+    <h2 class="category-title">Måltidstyp:</h2>
     <div class="filter-container" id="meal-types">
         <div class="image-button" data-category="mealType" data-filter="lunch & middag">
             <img src="images/knappargenerator/knappar/6.png" alt="X" />
