ändrar sökknappens utseende

--- a/generator.html
+++ b/generator.html
@@ -217,6 +217,11 @@
     </div>
 
     <script src="generator.js"></script>
+
+    <div class="footer-banner">
+        <button id="searchBtn">Sök</button>
+    </div>
+
 </body>
 
 </html>
