--- a/generator.html
+++ b/generator.html
@@ -174,7 +174,7 @@
     <h2 class="category-title">Måltidstyp:</h2>
     <div class="filter-container" id="meal-types">
         <div class="image-button" data-category="mealType" data-filter="lunch & middag">
-            <img src="images/knappargenerator/knappar/förätter&tilltugg.png" alt="X" />
+            <img src="images/knappargenerator/knappar/foratter&tilltugg.png" alt="X" />
         </div>
         <div class="image-button" data-category="mealType" data-filter="lunch & middag">
             <img src="images/knappargenerator/knappar/6.png" alt="X" />
