--- a/generator.html
+++ b/generator.html
@@ -135,74 +135,71 @@
     </div>
 
 
-    <h2 class="category-title">Typ av Protein:</h2>
-    <div class="filter-container" id="proteins">
-        <div class="image-button" data-category="protein" data-filter="fisk">
-            <img src="images/knappargenerator/knappar/14.png" alt="Fisk" />
+    <h2 class="category-title">Länder:</h2>
+    <!-- Sökfilter Knappar -->
+    <!-- Filter Knappar -->
+    <div class="filter-container" id="countries">
+        <div class="image-button" data-category="country" data-filter="sverige">
+            <img src="images/knappargenerator/knappar/14.png" alt="Sverige" />
         </div>
-        <div class="image-button" data-category="protein" data-filter="fisk">
-            <img src="images/knappargenerator/knappar/14.png" alt="Fisk" />
+        <div class="image-button" data-category="country" data-filter="italien">
+            <img src="images/knappargenerator/knappar/thailand7.png" alt="Thailand" />
         </div>
-        <div class="image-button" data-category="protein" data-filter="fisk">
-            <img src="images/knappargenerator/knappar/14.png" alt="Fisk" />
+        <div class="image-button" data-category="country" data-filter="sverige">
+            <img src="images/knappargenerator/knappar/16.png" alt="Sverige" />
         </div>
-        <div class="image-button" data-category="protein" data-filter="fisk">
-            <img src="images/knappargenerator/knappar/14.png" alt="Fisk" />
-        </div>
-        <div class="image-button" data-category="protein" data-filter="fisk">
-            <img src="images/knappargenerator/knappar/14.png" alt="Fisk" />
+        <div class="image-button" data-category="country" data-filter="italien">
+            <img src="images/knappargenerator/knappar/17.png" alt="Italien" />
         </div>
         <!-- Dolda knappar som visas när "Visa fler" klickas -->
-        <div class="image-button hidden" data-category="protein" data-filter="fisk">
-            <img src="images/knappargenerator/knappar/22.png" alt="X" />
+        <div class="image-button hidden" data-category="country" data-filter="frankrike">
+            <img src="images/knappargenerator/knappar/11.png" alt="Frankrike" />
         </div>
-        <div class="image-button hidden" data-category="protein" data-filter="fisk">
-            <img src="images/knappargenerator/knappar/22.png" alt="X" />
+        <div class="image-button hidden" data-category="country" data-filter="spanien">
+            <img src="images/knappargenerator/knappar/16.png" alt="Spanien" />
         </div>
-        <div class="image-button hidden" data-category="protein" data-filter="fisk">
-            <img src="images/knappargenerator/knappar/22.png" alt="X" />
+        <div class="image-button hidden" data-category="country" data-filter="tyskland">
+            <img src="images/knappargenerator/knappar/18.png" alt="Tyskland" />
         </div>
         <!-- Lägg till fler dolda knappar efter behov -->
 
         <!-- Lägg till en "Visa fler"-knapp här -->
-        <div class="show-more-btn" data-target="proteins">Visa fler</div>
+        <div class="show-more-btn" data-target="countries">Visa fler</div>
     </div>
 
-    <h2 class="category-title">Måltidstyp:</h2>
-    <div class="filter-container" id="meal-types">
-        <div class="image-button" data-category="mealType" data-filter="lunch & middag">
-            <img src="images/knappargenerator/knappar/foratter&tilltugg.png" alt="X" />
+
+    <h2 class="category-title">Länder:</h2>
+    <!-- Sökfilter Knappar -->
+    <!-- Filter Knappar -->
+    <div class="filter-container" id="countries">
+        <div class="image-button" data-category="country" data-filter="sverige">
+            <img src="images/knappargenerator/knappar/14.png" alt="Sverige" />
         </div>
-        <div class="image-button" data-category="mealType" data-filter="lunch & middag">
-            <img src="images/knappargenerator/knappar/6.png" alt="X" />
+        <div class="image-button" data-category="country" data-filter="italien">
+            <img src="images/knappargenerator/knappar/thailand7.png" alt="Thailand" />
         </div>
-        <div class="image-button" data-category="mealType" data-filter="lunch & middag">
-            <img src="images/knappargenerator/knappar/6.png" alt="X" />
+        <div class="image-button" data-category="country" data-filter="sverige">
+            <img src="images/knappargenerator/knappar/16.png" alt="Sverige" />
         </div>
-        <div class="image-button" data-category="mealType" data-filter="lunch & middag">
-            <img src="images/knappargenerator/knappar/6.png" alt="X" />
-        </div>
-        <div class="image-button" data-category="mealType" data-filter="lunch & middag">
-            <img src="images/knappargenerator/knappar/6.png" alt="X" />
+        <div class="image-button" data-category="country" data-filter="italien">
+            <img src="images/knappargenerator/knappar/17.png" alt="Italien" />
         </div>
         <!-- Dolda knappar som visas när "Visa fler" klickas -->
-        <div class="image-button hidden" data-category="mealType" data-filter="lunch & middag">
-            <img src="images/knappargenerator/knappar/8.png" alt="X" />
+        <div class="image-button hidden" data-category="country" data-filter="frankrike">
+            <img src="images/knappargenerator/knappar/11.png" alt="Frankrike" />
         </div>
-        <div class="image-button hidden" data-category="mealType" data-filter="lunch & middag">
-            <img src="images/knappargenerator/knappar/8.png" alt="X" />
+        <div class="image-button hidden" data-category="country" data-filter="spanien">
+            <img src="images/knappargenerator/knappar/16.png" alt="Spanien" />
         </div>
-        <div class="image-button hidden" data-category="mealType" data-filter="lunch & middag">
-            <img src="images/knappargenerator/knappar/8.png" alt="X" />
-        </div>
-        <div class="image-button hidden" data-category="mealType" data-filter="lunch & middag">
-            <img src="images/knappargenerator/knappar/8.png" alt="X" />
+        <div class="image-button hidden" data-category="country" data-filter="tyskland">
+            <img src="images/knappargenerator/knappar/18.png" alt="Tyskland" />
         </div>
         <!-- Lägg till fler dolda knappar efter behov -->
 
         <!-- Lägg till en "Visa fler"-knapp här -->
-        <div class="show-more-btn" data-target="meal-types">Visa fler</div>
+        <div class="show-more-btn" data-target="countries">Visa fler</div>
     </div>
+
 
     <!-- Sök Knapp -->
     <button id="searchBtn">Sök</button>
