--- a/generator.html
+++ b/generator.html
@@ -102,7 +102,7 @@
 
     <div class="background-container"></div>
 
-    <h2 class="category-title">Länder:</h2>
+    <h2 class="category-title">Mat Från:</h2>
     <!-- Sökfilter Knappar -->
     <!-- Filter Knappar -->
     <div class="filter-container" id="countries">
@@ -135,69 +135,69 @@
     </div>
 
 
-    <h2 class="category-title">Länder:</h2>
+    <h2 class="category-title">Protein:</h2>
     <!-- Sökfilter Knappar -->
     <!-- Filter Knappar -->
-    <div class="filter-container" id="countries">
-        <div class="image-button" data-category="country" data-filter="sverige">
+    <div class="filter-container" id="proteins">
+        <div class="image-button" data-category="protein" data-filter="sverige">
             <img src="images/knappargenerator/knappar/14.png" alt="Sverige" />
         </div>
-        <div class="image-button" data-category="country" data-filter="italien">
+        <div class="image-button" data-category="protein" data-filter="italien">
             <img src="images/knappargenerator/knappar/thailand7.png" alt="Thailand" />
         </div>
-        <div class="image-button" data-category="country" data-filter="sverige">
+        <div class="image-button" data-category="protein" data-filter="sverige">
             <img src="images/knappargenerator/knappar/16.png" alt="Sverige" />
         </div>
-        <div class="image-button" data-category="country" data-filter="italien">
+        <div class="image-button" data-category="protein" data-filter="italien">
             <img src="images/knappargenerator/knappar/17.png" alt="Italien" />
         </div>
         <!-- Dolda knappar som visas när "Visa fler" klickas -->
-        <div class="image-button hidden" data-category="country" data-filter="frankrike">
+        <div class="image-button hidden" data-category="protein" data-filter="frankrike">
             <img src="images/knappargenerator/knappar/11.png" alt="Frankrike" />
         </div>
-        <div class="image-button hidden" data-category="country" data-filter="spanien">
+        <div class="image-button hidden" data-category="protein" data-filter="spanien">
             <img src="images/knappargenerator/knappar/16.png" alt="Spanien" />
         </div>
-        <div class="image-button hidden" data-category="country" data-filter="tyskland">
+        <div class="image-button hidden" data-category="protein" data-filter="tyskland">
             <img src="images/knappargenerator/knappar/18.png" alt="Tyskland" />
         </div>
         <!-- Lägg till fler dolda knappar efter behov -->
 
         <!-- Lägg till en "Visa fler"-knapp här -->
-        <div class="show-more-btn" data-target="countries">Visa fler</div>
+        <div class="show-more-btn" data-target="proteins">Visa fler</div>
     </div>
 
 
-    <h2 class="category-title">Länder:</h2>
+    <h2 class="category-title">Typ av Mat:</h2>
     <!-- Sökfilter Knappar -->
     <!-- Filter Knappar -->
-    <div class="filter-container" id="countries">
-        <div class="image-button" data-category="country" data-filter="sverige">
+    <div class="filter-container" id="mealType">
+        <div class="image-button" data-category="meal-type" data-filter="sverige">
             <img src="images/knappargenerator/knappar/14.png" alt="Sverige" />
         </div>
-        <div class="image-button" data-category="country" data-filter="italien">
+        <div class="image-button" data-category="meal-type" data-filter="italien">
             <img src="images/knappargenerator/knappar/thailand7.png" alt="Thailand" />
         </div>
-        <div class="image-button" data-category="country" data-filter="sverige">
+        <div class="image-button" data-category="meal-type" data-filter="sverige">
             <img src="images/knappargenerator/knappar/16.png" alt="Sverige" />
         </div>
-        <div class="image-button" data-category="country" data-filter="italien">
+        <div class="image-button" data-category="meal-type" data-filter="italien">
             <img src="images/knappargenerator/knappar/17.png" alt="Italien" />
         </div>
         <!-- Dolda knappar som visas när "Visa fler" klickas -->
-        <div class="image-button hidden" data-category="country" data-filter="frankrike">
+        <div class="image-button hidden" data-category="meal-type" data-filter="frankrike">
             <img src="images/knappargenerator/knappar/11.png" alt="Frankrike" />
         </div>
-        <div class="image-button hidden" data-category="country" data-filter="spanien">
+        <div class="image-button hidden" data-category="meal-type" data-filter="spanien">
             <img src="images/knappargenerator/knappar/16.png" alt="Spanien" />
         </div>
-        <div class="image-button hidden" data-category="country" data-filter="tyskland">
+        <div class="image-button hidden" data-category="meal-type" data-filter="tyskland">
             <img src="images/knappargenerator/knappar/18.png" alt="Tyskland" />
         </div>
         <!-- Lägg till fler dolda knappar efter behov -->
 
         <!-- Lägg till en "Visa fler"-knapp här -->
-        <div class="show-more-btn" data-target="countries">Visa fler</div>
+        <div class="show-more-btn" data-target="mealType">Visa fler</div>
     </div>
 
 
