--- a/generator.html
+++ b/generator.html
@@ -201,7 +201,8 @@
     </div>
 
 
-   
+    <!-- Sök Knapp -->
+    <button id="searchBtn">Sök</button>
 
     <div id="pagination-controls"></div> <!-- Pagineringskontroller här -->
 
@@ -209,9 +210,7 @@
     <!-- Footer content här -->
     </div>
 
-    <div class="footer-banner">
-        <button id="searchBtn">Sök</button>
-    </div>
+   
     <script src="generator.js"></script>
 
 </body>
