--- a/generator.html
+++ b/generator.html
@@ -21,9 +21,9 @@
         </label>
         <ul class="nav__list">
             <li class="nav__item">
-                <a href="#hoi" class="nav__link">
+                <a href="generator.html" class="nav__link">
                     <span class="nav__text">
-                        Startsida
+                        Generatorn
                     </span>
                 </a>
             </li>
@@ -210,7 +210,9 @@
     <!-- Footer content här -->
     </div>
 
-   
+    <!--<div class="footer-banner">
+        <button id="searchBtn">Sök</button>
+    </div> -->
     <script src="generator.js"></script>
 
 </body>
