--- a/generator.html
+++ b/generator.html
@@ -28,6 +28,13 @@
                 </a>
             </li>
             <li class="nav__item">
+                <a href="index.html" class="nav__link">
+                    <span class="nav__text">
+                        Ingredienssök
+                    </span>
+                </a>
+            </li>
+            <li class="nav__item">
                 <a href="#hoi" class="nav__link">
                     <span class="nav__text">
                         Om
