--- a/generator.html
+++ b/generator.html
@@ -30,7 +30,7 @@
             <li class="nav__item">
                 <a href="index.html" class="nav__link">
                     <span class="nav__text">
-                        Ingredienssök
+                        Ingredienser
                     </span>
                 </a>
             </li>
