--- a/index.html
+++ b/index.html
@@ -33,9 +33,16 @@
         </label>
         <ul class="nav__list">
             <li class="nav__item">
-                <a href="#hoi" class="nav__link">
+                <a href="generator.html" class="nav__link">
                     <span class="nav__text">
-                        Startsida
+                        Generatorn
+                    </span>
+                </a>
+            </li>
+            <li class="nav__item">
+                <a href="index.html" class="nav__link">
+                    <span class="nav__text">
+                        Ingredienser
                     </span>
                 </a>
             </li>
