--- a/generator.html
+++ b/generator.html
@@ -215,6 +215,9 @@
 
 
     <!-- Footer content här -->
+    <div class="footer-banner">
+        <!-- Footer content -->
+        <!-- Innehåll för din banner, t.ex. Om Oss och Tipsa Oss länkar -->
     </div>
 
     <!--<div class="footer-banner">
