--- a/generator.html
+++ b/generator.html
@@ -119,20 +119,20 @@
             <img src="images/knappargenerator/knappar/pasta.png" alt="Sverige" />
         </div>
         <div class="image-button" data-category="meal-type" data-filter="italien">
-            <img src="images/knappargenerator/knappar/pasta.png"  alt="Thailand" />
+            <img src="images/knappargenerator/knappar/pasta.png" alt="Thailand" />
         </div>
         <div class="image-button" data-category="meal-type" data-filter="sverige">
-            <img src="images/knappargenerator/knappar/pasta.png"  alt="Sverige" />
+            <img src="images/knappargenerator/knappar/pasta.png" alt="Sverige" />
         </div>
         <div class="image-button" data-category="meal-type" data-filter="italien">
-            <img src="images/knappargenerator/knappar/pasta.png"  alt="Italien" />
+            <img src="images/knappargenerator/knappar/pasta.png" alt="Italien" />
         </div>
         <!-- Dolda knappar som visas när "Visa fler" klickas -->
         <div class="image-button hidden" data-category="meal-type" data-filter="frankrike">
             <img src="images/knappargenerator/knappar/pasta.png" alt="Frankrike" />
         </div>
         <div class="image-button hidden" data-category="meal-type" data-filter="spanien">
-            <img src="images/knappargenerator/knappar/pasta.png"  alt="Spanien" />
+            <img src="images/knappargenerator/knappar/pasta.png" alt="Spanien" />
         </div>
         <div class="image-button hidden" data-category="meal-type" data-filter="tyskland">
             <img src="images/knappargenerator/knappar/pasta.png" alt="Tyskland" />
@@ -140,7 +140,8 @@
         <!-- Lägg till fler dolda knappar efter behov -->
 
         <!-- Lägg till en "Visa fler"-knapp här -->
-        <div class="show-more-btn" data-target="mealType">Visa fler</div>
+        <div class="show-more-btn" data-target="mealType" data-expanded="false">Visa fler</div>
+
     </div>
 
     <div class="category-header">
@@ -153,7 +154,7 @@
             <img src="images/knappargenerator/knappar/pasta.png" alt="Sverige" />
         </div>
         <div class="image-button" data-category="protein" data-filter="italien">
-            <img src="images/knappargenerator/knappar/pasta.png"  alt="Thailand" />
+            <img src="images/knappargenerator/knappar/pasta.png" alt="Thailand" />
         </div>
         <div class="image-button" data-category="protein" data-filter="sverige">
             <img src="images/knappargenerator/knappar/pasta.png" alt="Sverige" />
@@ -174,7 +175,8 @@
         <!-- Lägg till fler dolda knappar efter behov -->
 
         <!-- Lägg till en "Visa fler"-knapp här -->
-        <div class="show-more-btn" data-target="proteins">Visa fler</div>
+        <div class="show-more-btn" data-target="proteins" data-expanded="false">Visa fler</div>
+
     </div>
 
 
@@ -186,7 +188,7 @@
     <!-- Filter Knappar -->
     <div class="filter-container" id="countries">
         <div class="image-button" data-category="country" data-filter="sverige">
-            <img src="images/knappargenerator/knappar/pasta.png"  alt="Sverige" />
+            <img src="images/knappargenerator/knappar/pasta.png" alt="Sverige" />
         </div>
         <div class="image-button" data-category="country" data-filter="italien">
             <img src="images/knappargenerator/knappar/pasta.png" alt="Thailand" />
@@ -210,12 +212,13 @@
         <!-- Lägg till fler dolda knappar efter behov -->
 
         <!-- Lägg till en "Visa fler"-knapp här -->
-        <div class="show-more-btn" data-target="countries">Visa fler</div>
+        <div class="show-more-btn" data-target="countries" data-expanded="false">Visa fler</div>
+
     </div>
 
 
-   
-    
+
+
 
 
     <!-- Sök Knapp -->
