--- a/generator.html
+++ b/generator.html
@@ -116,26 +116,35 @@
     <!-- Filter Knappar -->
     <div class="filter-container" id="mealType">
         <div class="image-button" data-category="meal-type" data-filter="sverige">
-            <img src="images/knappargenerator/knappar/pasta.png" alt="Sverige" />
+            <img src="images/knappargenerator/knappar/lunchmiddag.png" alt="lunchmiddag" />
         </div>
         <div class="image-button" data-category="meal-type" data-filter="italien">
             <img src="images/knappargenerator/knappar/pasta.png" alt="Thailand" />
         </div>
         <div class="image-button" data-category="meal-type" data-filter="sverige">
-            <img src="images/knappargenerator/knappar/pasta.png" alt="Sverige" />
+            <img src="images/knappargenerator/knappar/forattertilltugg.png" alt="Sverige" />
         </div>
         <div class="image-button" data-category="meal-type" data-filter="italien">
-            <img src="images/knappargenerator/knappar/pasta.png" alt="Italien" />
+            <img src="images/knappargenerator/knappar/streetfood.png" alt="Italien" />
         </div>
         <!-- Dolda knappar som visas när "Visa fler" klickas -->
         <div class="image-button hidden" data-category="meal-type" data-filter="frankrike">
-            <img src="images/knappargenerator/knappar/pasta.png" alt="Frankrike" />
+            <img src="images/knappargenerator/knappar/frukostbrunch.png" alt="Frankrike" />
         </div>
         <div class="image-button hidden" data-category="meal-type" data-filter="spanien">
-            <img src="images/knappargenerator/knappar/pasta.png" alt="Spanien" />
+            <img src="images/knappargenerator/knappar/barnvanligt.png" alt="Spanien" />
         </div>
         <div class="image-button hidden" data-category="meal-type" data-filter="tyskland">
-            <img src="images/knappargenerator/knappar/pasta.png" alt="Tyskland" />
+            <img src="images/knappargenerator/knappar/soppa.png" alt="Tyskland" />
+        </div>
+        <div class="image-button hidden" data-category="meal-type" data-filter="tyskland">
+            <img src="images/knappargenerator/knappar/sallad.png" alt="Tyskland" />
+        </div>
+        <div class="image-button hidden" data-category="meal-type" data-filter="tyskland">
+            <img src="images/knappargenerator/knappar/sasdipproror.png" alt="Tyskland" />
+        </div>
+        <div class="image-button hidden" data-category="meal-type" data-filter="tyskland">
+            <img src="images/knappargenerator/knappar/efterattfika.png" alt="Tyskland" />
         </div>
         <!-- Lägg till fler dolda knappar efter behov -->
 
