--- a/generator.html
+++ b/generator.html
@@ -160,26 +160,32 @@
     <!-- Filter Knappar -->
     <div class="filter-container" id="proteins">
         <div class="image-button" data-category="protein" data-filter="sverige">
-            <img src="images/knappargenerator/knappar/pasta.png" alt="Sverige" />
+            <img src="images/knappargenerator/knappar/not.png" alt="Sverige" />
         </div>
         <div class="image-button" data-category="protein" data-filter="italien">
-            <img src="images/knappargenerator/knappar/pasta.png" alt="Thailand" />
+            <img src="images/knappargenerator/knappar/fisk.png" alt="Thailand" />
         </div>
         <div class="image-button" data-category="protein" data-filter="sverige">
-            <img src="images/knappargenerator/knappar/pasta.png" alt="Sverige" />
+            <img src="images/knappargenerator/knappar/fagel.png" alt="Sverige" />
         </div>
         <div class="image-button" data-category="protein" data-filter="italien">
-            <img src="images/knappargenerator/knappar/pasta.png" alt="Italien" />
+            <img src="images/knappargenerator/knappar/flask.png" alt="Italien" />
         </div>
         <!-- Dolda knappar som visas när "Visa fler" klickas -->
         <div class="image-button hidden" data-category="protein" data-filter="frankrike">
-            <img src="images/knappargenerator/knappar/pasta.png" alt="Frankrike" />
+            <img src="images/knappargenerator/knappar/vegetarisk.png" alt="Frankrike" />
         </div>
         <div class="image-button hidden" data-category="protein" data-filter="spanien">
-            <img src="images/knappargenerator/knappar/pasta.png" alt="Spanien" />
+            <img src="images/knappargenerator/knappar/vegansk.png" alt="Spanien" />
         </div>
         <div class="image-button hidden" data-category="protein" data-filter="tyskland">
-            <img src="images/knappargenerator/knappar/pasta.png" alt="Tyskland" />
+            <img src="images/knappargenerator/knappar/skaldjur.png" alt="Tyskland" />
+        </div>
+        <div class="image-button hidden" data-category="protein" data-filter="tyskland">
+            <img src="images/knappargenerator/knappar/vilt.png" alt="Tyskland" />
+        </div>
+        <div class="image-button hidden" data-category="protein" data-filter="tyskland">
+            <img src="images/knappargenerator/knappar/lamm.png" alt="Tyskland" />
         </div>
         <!-- Lägg till fler dolda knappar efter behov -->
 
@@ -197,26 +203,56 @@
     <!-- Filter Knappar -->
     <div class="filter-container" id="countries">
         <div class="image-button" data-category="country" data-filter="sverige">
-            <img src="images/knappargenerator/knappar/pasta.png" alt="Sverige" />
+            <img src="images/knappargenerator/knappar/italien.png" alt="Sverige" />
         </div>
         <div class="image-button" data-category="country" data-filter="italien">
-            <img src="images/knappargenerator/knappar/pasta.png" alt="Thailand" />
+            <img src="images/knappargenerator/knappar/sverige.png" alt="Thailand" />
         </div>
         <div class="image-button" data-category="country" data-filter="sverige">
-            <img src="images/knappargenerator/knappar/pasta.png" alt="Sverige" />
+            <img src="images/knappargenerator/knappar/japan.png" alt="Sverige" />
         </div>
         <div class="image-button" data-category="country" data-filter="italien">
-            <img src="images/knappargenerator/knappar/pasta.png" alt="Italien" />
+            <img src="images/knappargenerator/knappar/indien.png" alt="Italien" />
         </div>
         <!-- Dolda knappar som visas när "Visa fler" klickas -->
         <div class="image-button hidden" data-category="country" data-filter="frankrike">
-            <img src="images/knappargenerator/knappar/pasta.png" alt="Frankrike" />
+            <img src="images/knappargenerator/knappar/kina.png" alt="Frankrike" />
         </div>
         <div class="image-button hidden" data-category="country" data-filter="spanien">
-            <img src="images/knappargenerator/knappar/pasta.png" alt="Spanien" />
+            <img src="images/knappargenerator/knappar/thailand.png" alt="Spanien" />
         </div>
         <div class="image-button hidden" data-category="country" data-filter="tyskland">
-            <img src="images/knappargenerator/knappar/pasta.png" alt="Tyskland" />
+            <img src="images/knappargenerator/knappar/korea.png" alt="Tyskland" />
+        </div>
+        <div class="image-button hidden" data-category="country" data-filter="tyskland">
+            <img src="images/knappargenerator/knappar/mexiko.png" alt="Tyskland" />
+        </div>
+        <div class="image-button hidden" data-category="country" data-filter="tyskland">
+            <img src="images/knappargenerator/knappar/frankrike.png" alt="Tyskland" />
+        </div>
+        <div class="image-button hidden" data-category="country" data-filter="tyskland">
+            <img src="images/knappargenerator/knappar/spanien" alt="Tyskland" />
+        </div>
+        <div class="image-button hidden" data-category="country" data-filter="tyskland">
+            <img src="images/knappargenerator/knappar/grekland.png" alt="Tyskland" />
+        </div>
+        <div class="image-button hidden" data-category="country" data-filter="tyskland">
+            <img src="images/knappargenerator/knappar/asien.png" alt="Tyskland" />
+        </div>
+        <div class="image-button hidden" data-category="country" data-filter="tyskland">
+            <img src="images/knappargenerator/knappar/europa.png" alt="Tyskland" />
+        </div>
+        <div class="image-button hidden" data-category="country" data-filter="tyskland">
+            <img src="images/knappargenerator/knappar/nordamerika.png" alt="Tyskland" />
+        </div>
+        <div class="image-button hidden" data-category="country" data-filter="tyskland">
+            <img src="images/knappargenerator/knappar/sydamerika.png" alt="Tyskland" />
+        </div>
+        <div class="image-button hidden" data-category="country" data-filter="tyskland">
+            <img src="images/knappargenerator/knappar/mellanostern.png" alt="Tyskland" />
+        </div>
+        <div class="image-button hidden" data-category="country" data-filter="tyskland">
+            <img src="images/knappargenerator/knappar/afrika.png" alt="Tyskland" />
         </div>
         <!-- Lägg till fler dolda knappar efter behov -->
 
