--- a/generator.html
+++ b/generator.html
@@ -231,7 +231,7 @@
             <img src="images/knappargenerator/knappar/frankrike.png" alt="Tyskland" />
         </div>
         <div class="image-button hidden" data-category="country" data-filter="tyskland">
-            <img src="images/knappargenerator/knappar/spanien" alt="Tyskland" />
+            <img src="images/knappargenerator/knappar/spanien" alt="spanien" />
         </div>
         <div class="image-button hidden" data-category="country" data-filter="tyskland">
             <img src="images/knappargenerator/knappar/grekland.png" alt="Tyskland" />
